instanceof HTMLSourceElement Fails https://bugs.webkit.org/show_bug.cgi?id=65013

Patch by Tom Zakrajsek <tomz@codeaurora.org> on 2011-08-20
Reviewed by Eric Carlson.

Source/WebCore:

Add HTMLSourceElement to DOMWindow.idl for consistency.  Constructors for
all elements should be available on DOMWindow.

 * bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore::RuntimeEnabledFeatures::htmlSourceElementEnabled):
* bindings/generic/RuntimeEnabledFeatures.h:
* page/DOMWindow.idl:

LayoutTests:

Updated test results after adding HTMLSourceElement to the DOMWindow

* fast/dom/prototype-inheritance-2-expected.txt:
* fast/dom/prototype-inheritance-expected.txt:
* platform/chromium/fast/dom/prototype-inheritance-expected.txt:
* platform/gtk/fast/dom/prototype-inheritance-2-expected.txt:
* platform/gtk/fast/dom/prototype-inheritance-expected.txt:
* platform/qt-wk2/fast/dom/prototype-inheritance-2-expected.txt:
* platform/qt/fast/dom/prototype-inheritance-2-expected.txt:
* platform/qt/fast/dom/prototype-inheritance-expected.txt:
* platform/win/fast/dom/prototype-inheritance-expected.txt:

Canonical link: https://commits.webkit.org/82471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93482 268f45cc-cd09-0410-ab3c-d52691b4dbfc