Source/WebCore/bindings/generic/RuntimeEnabledFeatures.cpp
@@ -104,6 +104,11 @@ bool RuntimeEnabledFeatures::htmlVideoElementEnabled()
     return MediaPlayer::isAvailable();
 }
 
+bool RuntimeEnabledFeatures::htmlSourceElementEnabled()
+{
+    return MediaPlayer::isAvailable();
+}
+
 bool RuntimeEnabledFeatures::mediaErrorEnabled()
 {
     return MediaPlayer::isAvailable();
